--- a/mainPage/index.html
+++ b/mainPage/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/mainPage/assets/css/style.css">
     <link type="Image/x-icon" href="./assets/img/icon/favicon.ico" rel="icon">
     <title>Danlast</title>
 </head>
@@ -16,7 +16,6 @@
                 <h1>Danlast</h1>
                 <p> A stranger's heart is a deep well,<br>
                     it's too dark there to see well.</p>
-    
             </div>
 
 
@@ -43,27 +42,27 @@
                 <div class="sm-wrapper hidden" id = "sm-wrapper">
                     <div class="sm">
                         <label for="">sm 1</label>
-                        <a href="https://danlast.github.io/11-23-ladan-js/sm1" target="_blank" class="link">Site</a>
+                        <a href="https://danlast.github.io/11-23-ladan-js/sm1/index.html" target="_blank" class="link">Site</a>
                         <a href="https://github.com/Danlast/11-23-ladan-js/tree/main/sm1" target="_blank" class="link">GitHub</a>
                     </div>
                     <div class="sm">
                         <label for="">sm 2</label>
-                        <a href="https://danlast.github.io/11-23-ladan-js/sm2" target="_blank" class="link">Site</a>
+                        <a href="https://danlast.github.io/11-23-ladan-js/sm2/index.html" target="_blank" class="link">Site</a>
                         <a href="https://github.com/Danlast/11-23-ladan-js/tree/main/sm2" target="_blank" class="link">GitHub</a>
                     </div>
                     <div class="sm">
                         <label for="">sm 3</label>
-                        <a href="https://danlast.github.io/11-23-ladan-js/sm3" target="_blank" class="link">Site</a>
+                        <a href="https://danlast.github.io/11-23-ladan-js/sm3/index.html" target="_blank" class="link">Site</a>
                         <a href="https://github.com/Danlast/11-23-ladan-js/tree/main/sm3" target="_blank" class="link">GitHub</a>
                     </div>
                     <div class="sm">
                         <label for="">sm 4</label>
-                        <a href="https://danlast.github.io/11-23-ladan-js/sm4" target="_blank" class="link">Site</a>
+                        <a href="https://danlast.github.io/11-23-ladan-js/sm4/index.html" target="_blank" class="link">Site</a>
                         <a href="https://github.com/Danlast/11-23-ladan-js/tree/main/sm4" target="_blank" class="link">GitHub</a>
                     </div>
                     <div class="sm">
                         <label for="">sm 5</label>
-                        <a href="https://danlast.github.io/11-23-ladan-js/sm5" target="_blank" class="link">Site</a>
+                        <a href="https://danlast.github.io/11-23-ladan-js/sm5/index.html" target="_blank" class="link">Site</a>
                         <a href="https://github.com/Danlast/11-23-ladan-js/tree/main/sm5" target="_blank" class="link">GitHub</a>
                     </div>
                 </div>
